@@ -7,6 +7,7 @@
 Changed
 - Bug Fixes
  - Performance fixes for query evaluation ove graphs (CORE-449, CORE-450, CORE-451)
+ - BaseEndpoint now permits more access to the HttpWebRequest prior to issuing it to allow for extra customisation (CORE-448)
 
 1.0.8
 -----
